--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -1,8 +1,8 @@
 name: CD
 
 on:
-  # schedule:
-  #   - cron: '0 */6 * * *'
+  schedule:
+    - cron: '0 */6 * * *'
   push:
     branches: [main]
 
@@ -16,20 +16,20 @@ jobs:
         with:
           node-version: 18
           registry-url: 'https://registry.npmjs.org'
-          cache: 'pnpm'
-          cache-dependency-path: '**/pnpm-lock.yaml'
       - uses: superfly/flyctl-actions/setup-flyctl@master
       - name: Env
         run: |
-          chmod +x scripts/env.sh;
-          ENV="$(echo ${{ secrets.ENV }})" scripts/env.sh >/dev/null 2>&1;
-          pnpm install --frozen-lockfile;
+          echo "${{ secrets.ENV }}" > .env
+      - name: Install
+        run: |
+          pnpm install --frozen-lockfile
       - name: Build
         run: |
-          source .env && pnpm run cd:build;
+          pnpm run cd:build
       - name: Deploy Fly
         # load env vars, install deps, create fly.toml, and deploy
         run: |
-          source .env && flyctl deploy --local-only -t "$FLY_ACCESS_TOKEN";
+          flyctl deploy --local-only -t "${{ secrets.FLY_ACCESS_TOKEN }}"
       - name: DNS
-        run: source .env && pnpm run cd:dns;
+        run: |
+          pnpm run cd:dns
