--- a/fly.toml
+++ b/fly.toml
@@ -5,11 +5,10 @@ kill_signal = "SIGINT"
 kill_timeout = 5
 
 [[services]]
-  http_checks = []
+  auto_stop_machines=false
+  auto_start_machines=true
   internal_port = 3000
-  processes = ["app"]
   protocol = "tcp"
-  script_checks = []
 
   [services.concurrency]
     hard_limit = 25
@@ -17,13 +16,8 @@ kill_timeout = 5
     type = "connections"
 
   [[services.ports]]
-    force_https = true
     handlers = ["http"]
     port = 80
-
-  [[services.ports]]
-    handlers = ["tls", "http"]
-    port = 443
 
   [[services.tcp_checks]]
     grace_period = "1s"
