--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "NODE_ENV=production node --no-warnings serve/index.mjs",
     "dev": "NODE_ENV=development node --no-warnings serve/index.mjs",
     "dev:setup": "npm run s:pull",
-    "dev:hard-reset": "rm -rf node_modules deployments.json deployments pnpm-lock.yaml && pnpm install",
+    "dev:hard-reset": "rm -rf node_modules deployments.json deployments waku pnpm-lock.yaml && pnpm install",
     "waku:build": "waku build",
     "waku:dev": "waku dev",
     "s:sync-versions": "npx tsx scripts/sync-versions.ts",
@@ -17,7 +17,8 @@
     "s:dns": "npx tsx scripts/dns.ts",
     "cd:build": "npm run s:pull && npm run waku:build",
     "cd:dns": "npm run s:dns",
-    "verify": "npm run dev:hard-reset && npm run cd:build && npm run cd:prep-fly && NODE_ENV=production node --no-warnings serve/index.mjs"
+    "verify": "npm run dev:hard-reset && npm run cd:build && NODE_ENV=production node --no-warnings serve/index.mjs",
+    "docker": "docker build --no-cache --tag 'image.wakuland' . && docker run -p 3000:3000 --detach \"image.wakuland\""
   },
   "prettier": {
     "singleQuote": true
@@ -25,6 +26,7 @@
   "dependencies": {
     "app-root-path": "^3.1.0",
     "autoprefixer": "10.4.17",
+    "clsx": "^2.1.0",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "http-proxy-middleware": "^2.0.6",
@@ -37,21 +39,25 @@
     "simple-git": "^3.22.0",
     "tailwindcss": "3.4.1",
     "tsx": "^4.7.1",
-    "typescript": "5.3.3",
     "usehooks-ts": "^2.14.0",
     "vite": "^5.1.3",
-    "waku": "^0.19.3"
+    "waku": "latest"
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.5.2",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.17",
     "@types/react": "18.2.55",
     "@types/react-dom": "18.2.19",
-    "@types/signale": "^1.4.7"
+    "@types/signale": "^1.4.7",
+    "daisyui": "^4.7.2",
+    "typescript": "^5.3.3"
   },
   "dockerfile": {
     "cache": "",
-    "distroless": true
+    "distroless": true,
+    "alpine": true,
+    "entrypoint": "node --no-warnings serve/index.mjs"
   }
 }
