--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@flydotio/dockerfile": "^0.5.2",
     "@tailwindcss/typography": "^0.5.10",
     "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.17",
     "@types/react": "18.2.55",
     "@types/react-dom": "18.2.19",
